Coding styles and CI Integrations

--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,10 @@
         "php" : ">=5.4",
         "speedwork/core" : "dev-master"
     },
+    "require-dev" : {
+        "phpunit/phpunit": "~3.7",
+        "satooshi/php-coveralls": "dev-master"
+    },
     "autoload" : {
         "psr-4": { "Speedwork\\Helpers\\": "src" }
     },
