--- a/composer.json
+++ b/composer.json
@@ -10,16 +10,20 @@
         }
     ],
     "require": {
-        "php" : ">=5.4",
-        "speedwork/core" : "dev-master"
+        "php" : ">=5.6",
+        "speedwork/core" : "~1.0"
     },
     "require-dev" : {
-        "phpunit/phpunit": "~3.7",
-        "satooshi/php-coveralls": "dev-master"
+        "phpunit/phpunit": "~5.5",
+        "satooshi/php-coveralls": "2.*"
     },
     "autoload" : {
         "psr-4": { "Speedwork\\Helpers\\": "src" }
     },
     "minimum-stability": "dev",
-    "preferred-install": "dist"
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
+    }
 }
