--- a/composer.json
+++ b/composer.json
@@ -3,22 +3,22 @@
     "type": "library",
     "description": "Speedwork Helpers",
     "license": "MIT",
-    "authors": [
-        {
-            "name": "sankar",
-            "email": "sankar.suda@gmail.com"
-        }
-    ],
+    "authors": [{
+        "name": "sankar",
+        "email": "sankar.suda@gmail.com"
+    }],
     "require": {
-        "php" : ">=5.5",
-        "speedwork/core" : "~1.0"
+        "php": ">=5.6",
+        "speedwork/core": "^1.0"
     },
-    "require-dev" : {
+    "require-dev": {
         "phpunit/phpunit": "~5.5",
         "satooshi/php-coveralls": "2.*"
     },
-    "autoload" : {
-        "psr-4": { "Speedwork\\Helpers\\": "src" }
+    "autoload": {
+        "psr-4": {
+            "Speedwork\\Helpers\\": "src"
+        }
     },
     "minimum-stability": "dev",
     "extra": {
