--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,14 @@
         "email": "sankar.suda@gmail.com"
     }],
     "require": {
-        "php": ">=5.6",
-        "speedwork/core": "^1.0"
+        "php": ">=5.6"
     },
     "require-dev": {
         "phpunit/phpunit": "~5.5",
         "satooshi/php-coveralls": "2.*"
+    },
+    "replace" : {
+        "speedwork/core": "self.version"
     },
     "autoload": {
         "psr-4": {
