--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,16 @@
         "phpunit/phpunit": "~5.5",
         "satooshi/php-coveralls": "2.*"
     },
+    "suggest" : {
+        "phpoffice/phpexcel": "1.8.1 for reader helper",
+        "ddeboer/data-import": "0.18.0 for reader helper",
+        "guzzle/guzzle": "3.9.*@dev for reader helper",
+        "willdurand/geocoder": "v3.2.0 for geo helper",
+        "geoip2/geoip2": "~v2 for geo helper",
+        "intervention/image" : "^2.3 for image helper",
+        "piwik/device-detector" : " for device helper",
+        "ensepar/html2pdf": "1.0.*@dev for pdf helper"
+    },
     "autoload": {
         "psr-4": {
             "Speedwork\\Helpers\\": "src"
